# Matrixv1.0-Bet_2

./: ALT.js  Anchor.toml  Cargo.lock.ex  Cargo.toml  SECURITY.md  base.js  base2.js  base_air.js  base_final_air.js  base_sem_air.js  check.js  claim_airdrop.js  criar_ATA_program.js  derive_vault.js  diagnose-solana.sh  info_programa_air.js  info_user_air.js  ini.js  ini2.js  ini_air.js  ini_final_air.js  ini_sem_air.js  leofinal.rs  matriz-airdrop-config.json  matriz-config.json  package-lock.json  package.json  program_token_vault.js  refer_air.js  referv4.js  referv5.js  registration-DufzggWD.json  simple-swap-config.json  temp_donut_vault.js  test.js  vault.js  verificar.js
.cargo/: config.toml
CLIENTES/: base.js  base_air.js  ini.js  referv6.js  transfer-buffer-auto-no-deploy.sh
carteiras/: carteira1.json  carteira10.json  carteira11.json  carteira12.json  carteira13.json  carteira14.json  carteira15.json  carteira16.json  carteira17.json  carteira18.json  carteira19.json  carteira2.json  carteira20.json  carteira3.json  carteira4.json  carteira5.json  carteira6.json  carteira7.json  carteira8.json  carteira9.json  resumo.json
programs/matrix-system/: Cargo.toml  build.rs
programs/matrix-system/.cargo/: config.toml
programs/matrix-system/src/: getrandom_custom.rs  getrandom_fix.rs  lib.rs  lib4.rs  lib_C_AIR.rs  lib_corrigida.rs  swap-pronto.rs
