[package]
name = "matrix-system"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "matrix_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
chainlink_solana = "1.0.0"
solana-security-txt = "1.1.1"
default-env = "0.1.1"
getrandom = { version = "0.2.15", features = ["custom"] }

[patch.crates-io]
getrandom = { version = "0.2.15", features = ["custom"] }