[package]
name = "matrix-system"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "matrix_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
solana-security-txt = "1.1.1"
default-env = "0.1.1"

# Resolver problema do getrandom
getrandom = { version = "0.2.15", features = ["custom"] }
ahash = { version = "0.8.11", default-features = false }

[patch.crates-io]
proc-macro2 = { version = "1.0.79" }
quote = { version = "1.0.35" }
syn = { version = "2.0.52" }